--- a/C4 - Convolutional Neural Networks/Week 2/KerasTutorial/Keras_Tutorial_v2a.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 2/KerasTutorial/Keras_Tutorial_v2a.ipynb
@@ -50,10 +50,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting keras==2.2\n",
+      "  Using cached Keras-2.2.0-py2.py3-none-any.whl (300 kB)\n",
+      "Requirement already satisfied: scipy>=0.14 in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (1.13.0)\n",
+      "Requirement already satisfied: pyyaml in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (6.0.1)\n",
+      "Requirement already satisfied: six>=1.9.0 in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (1.16.0)\n",
+      "Requirement already satisfied: h5py in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (3.11.0)\n",
+      "Requirement already satisfied: keras-applications==1.0.2 in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (1.0.2)\n",
+      "Requirement already satisfied: keras-preprocessing==1.0.1 in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (1.0.1)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in /mnt/Shared/workspace/jupyter/venv_jupyter_310/lib/python3.10/site-packages (from keras==2.2) (1.26.4)\n",
+      "Installing collected packages: keras\n",
+      "  Attempting uninstall: keras\n",
+      "    Found existing installation: keras 3.0.0\n",
+      "    Uninstalling keras-3.0.0:\n",
+      "      Successfully uninstalled keras-3.0.0\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "tensorflow 2.16.1 requires keras>=3.0.0, but you have keras 2.2.0 which is incompatible.\n",
+      "tensorflow 2.16.1 requires tensorboard<2.17,>=2.16, but you have tensorboard 2.17.0 which is incompatible.\n",
+      "tensorflow-cpu 2.16.1 requires keras>=3.0.0, but you have keras 2.2.0 which is incompatible.\n",
+      "tensorflow-cpu 2.16.1 requires tensorboard<2.17,>=2.16, but you have tensorboard 2.17.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed keras-2.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install keras==2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -107,11 +142,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "f = h5py.File('./datasets/test_happy.h5',\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of training examples = 600\n",
+      "number of test examples = 150\n",
+      "X_train shape: (600, 64, 64, 3)\n",
+      "Y_train shape: (600, 1)\n",
+      "X_test shape: (150, 64, 64, 3)\n",
+      "Y_test shape: (150, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_orig, Y_train_orig, X_test_orig, Y_test_orig, classes = load_dataset()\n",
     "\n",
@@ -243,7 +298,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -260,7 +318,6 @@
     "        If you have a batch like 'X_train', \n",
     "        then you can provide the input_shape using\n",
     "        X_train.shape[1:]\n",
-    "    \"\"\"\n",
     "\n",
     "    Returns:\n",
     "    model -- a Model() instance in Keras\n",
@@ -307,7 +364,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -331,7 +391,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -356,7 +419,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -379,6 +445,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -470,7 +539,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -505,7 +577,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "scrolled": false
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -516,7 +590,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -527,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -541,9 +618,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
