--- a/C4 - Convolutional Neural Networks/Week 1/Convolution_model_Application_2024.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 1/Convolution_model_Application_2024.ipynb
@@ -1634,7 +1634,7 @@
    "launcher_item_id": "0TkXB"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1648,9 +1648,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
