--- a/C4 - Convolutional Neural Networks/Week 2/ResNets/Residual_Networks_v2a.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 2/ResNets/Residual_Networks_v2a.ipynb
@@ -176,7 +176,10 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -214,22 +217,35 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
-    "    # Second component of main path (≈3 lines)\n",
-    "    X = Conv2D(filters = F2, kernel_size = (f, f), strides = (1,1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed=0))(X)\n",
-    "    X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
-    "    X = Activation('relu')(X)\n",
     "\n",
-    "    # Third component of main path (≈2 lines)\n",
-    "    X = Conv2D(filters = F3, kernel_size = (1, 1), strides = (1,1), padding = 'valid', name = conv_name_base + '2c', kernel_initializer = glorot_uniform(seed=0))(X)\n",
-    "    X = BatchNormalization(axis = 3, name = bn_name_base + '2c')(X)\n",
-    "\n",
-    "    # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
-    "    X = Add()([X, X_shortcut])\n",
-    "    X = Activation('relu')(X)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "    # # Second component of main path (≈3 lines)\n",
+    "    # X = Conv2D(filters = F2, kernel_size = (f, f), strides = (1,1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    # X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
+    "    # X = Activation('relu')(X)\n",
+    "\n",
+    "    # # Third component of main path (≈2 lines)\n",
+    "    # X = Conv2D(filters = F3, kernel_size = (1, 1), strides = (1,1), padding = 'valid', name = conv_name_base + '2c', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    # X = BatchNormalization(axis = 3, name = bn_name_base + '2c')(X)\n",
+    "\n",
+    "    # # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
+    "    # X = Add()([X, X_shortcut])\n",
+    "    # X = Activation('relu')(X)"
    ]
   },
   {
@@ -327,7 +343,10 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -368,7 +387,24 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "\n",
-    "    # Second component of main path (≈3 lines)\n",
+    "    \n",
+    "    \n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Second component of main path (≈3 lines)\n",
     "    X = Conv2D(F2,  kernel_size = (f, f), strides = (1,1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "    X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
     "    X = Activation('relu')(X)\n",
@@ -383,11 +419,7 @@
     "\n",
     "    # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
     "    X = Add()([X, X_shortcut])\n",
-    "    X = Activation('relu')(X) \n",
-    "    \n",
-    "    ### END CODE HERE ###\n",
-    "    \n",
-    "    return X"
+    "    X = Activation('relu')(X) "
    ]
   },
   {
@@ -486,7 +518,10 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -527,6 +562,37 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Stage 3\n",
+    "\n",
+    "\n",
+    "    # Stage 4\n",
+    "\n",
+    "\n",
+    "    # Stage 5\n",
+    "\n",
+    "\n",
+    "    # Average Pooling\n",
+    "\n",
+    "    \n",
+    "    ### END CODE HERE ###\n",
+    "\n",
+    "    # output layer\n",
+    "    X = Flatten()(X)\n",
+    "    X = Dense(classes, activation='softmax', name='fc' + str(classes), kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    \n",
+    "    \n",
+    "    # Create model\n",
+    "    model = Model(inputs = X_input, outputs = X, name='ResNet50')\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # Stage 3\n",
     "    X = convolutional_block(X, f=3, filters=[128, 128, 512], stage=3, block='a', s=2)\n",
     "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='b')\n",
     "    X = identity_block(X, 3, [128, 128, 512], stage=3, block='c')\n",
@@ -546,19 +612,7 @@
     "    X = identity_block(X, 3, [512, 512, 2048], stage=5, block='c')\n",
     "\n",
     "    # Average Pooling\n",
-    "    X = AveragePooling2D((2, 2), name='avg_pool')(X)\n",
-    "    \n",
-    "    ### END CODE HERE ###\n",
-    "\n",
-    "    # output layer\n",
-    "    X = Flatten()(X)\n",
-    "    X = Dense(classes, activation='softmax', name='fc' + str(classes), kernel_initializer = glorot_uniform(seed=0))(X)\n",
-    "    \n",
-    "    \n",
-    "    # Create model\n",
-    "    model = Model(inputs = X_input, outputs = X, name='ResNet50')\n",
-    "\n",
-    "    return model"
+    "    X = AveragePooling2D((2, 2), name='avg_pool')(X)"
    ]
   },
   {
@@ -572,7 +626,10 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -590,7 +647,10 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -663,9 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -788,7 +846,10 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3194,7 +3255,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -3207,7 +3271,7 @@
    "launcher_item_id": "jK9EQ"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3221,9 +3285,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
