--- a/C4 - Convolutional Neural Networks/Week 2/Transfer Learning with MobileNet/Transfer_learning_with_MobileNet_v1.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 2/Transfer Learning with MobileNet/Transfer_learning_with_MobileNet_v1.ipynb
@@ -218,12 +218,25 @@
     "        tf.keras.Sequential\n",
     "    '''\n",
     "    ### START CODE HERE\n",
-    "    data_augmentation = tf.keras.Sequential()\n",
-    "    data_augmentation.add(RandomFlip(\"horizontal\"))\n",
-    "    data_augmentation.add(RandomRotation(0.2))\n",
+    "\n",
     "    ### END CODE HERE\n",
     "    \n",
     "    return data_augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "    data_augmentation = tf.keras.Sequential()\n",
+    "    data_augmentation.add(RandomFlip(\"horizontal\"))\n",
+    "    data_augmentation.add(RandomRotation(0.2))"
    ]
   },
   {
@@ -996,6 +1009,50 @@
     "    \n",
     "    ### START CODE HERE\n",
     "    \n",
+    "\n",
+    "    \n",
+    "    # Freeze the base model by making it non trainable\n",
+    "    \n",
+    "    # create the input layer (Same as the imageNetv2 input size)\n",
+    "    \n",
+    "    \n",
+    "    # apply data augmentation to the inputs\n",
+    "    \n",
+    "    \n",
+    "    # data preprocessing using the same weights the model was trained on\n",
+    "    # Already Done -> preprocess_input = tf.keras.applications.mobilenet_v2.preprocess_input\n",
+    "    \n",
+    "    \n",
+    "    # set training to False to avoid keeping track of statistics in the batch norm layer\n",
+    "    \n",
+    "    \n",
+    "    # Add the new Binary classification layers\n",
+    "    # use global avg pooling to summarize the info in each channel\n",
+    "    \n",
+    "    #include dropout with probability of 0.2 to avoid overfitting\n",
+    "   \n",
+    "        \n",
+    "    # create a prediction layer with one neuron (as a classifier only needs one)\n",
+    "    \n",
+    "    \n",
+    "    ### END CODE HERE\n",
+    "    \n",
+    "    outputs = prediction_layer(x) \n",
+    "    model = tf.keras.Model(inputs, outputs)\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
     "    base_model = tf.keras.applications.MobileNetV2(input_shape=input_shape,\n",
     "                                                   include_top=False, # <== Important!!!!\n",
     "                                                   weights='imagenet') # From imageNet\n",
@@ -1023,14 +1080,7 @@
     "    x = tfl.Dropout(0.2)(x)\n",
     "        \n",
     "    # create a prediction layer with one neuron (as a classifier only needs one)\n",
-    "    prediction_layer = tfl.Dense(1)\n",
-    "    \n",
-    "    ### END CODE HERE\n",
-    "    \n",
-    "    outputs = prediction_layer(x) \n",
-    "    model = tf.keras.Model(inputs, outputs)\n",
-    "    \n",
-    "    return model"
+    "    prediction_layer = tfl.Dense(1)"
    ]
   },
   {
@@ -1822,7 +1872,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1836,7 +1886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
