--- a/C4 - Convolutional Neural Networks/Week 2/ResNets/Residual_Networks_v2a.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 2/ResNets/Residual_Networks_v2a.ipynb
@@ -41,14 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "C:\\ProgramData\\anaconda3\\envs\\ds310\\lib\\site-packages\\keras\\backend.py:451: UserWarning: `tf.keras.backend.set_learning_phase` is deprecated and will be removed after 2020-10-11. To update it, simply pass a True/False value to the `training` argument of the `__call__` method of your layer or model.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -174,13 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: identity_block\n",
@@ -217,7 +213,18 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    # # Second component of main path (≈3 lines)\n",
+    "    X = Conv2D(filters = F2, kernel_size = (f, f), strides = (1,1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
+    "    X = Activation('relu')(X)\n",
     "\n",
+    "    # # Third component of main path (≈2 lines)\n",
+    "    X = Conv2D(filters = F3, kernel_size = (1, 1), strides = (1,1), padding = 'valid', name = conv_name_base + '2c', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = BatchNormalization(axis = 3, name = bn_name_base + '2c')(X)\n",
+    "\n",
+    "    # # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
+    "    X = Add()([X, X_shortcut])\n",
+    "    X = Activation('relu')(X)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -227,42 +234,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "    # # Second component of main path (≈3 lines)\n",
-    "    # X = Conv2D(filters = F2, kernel_size = (f, f), strides = (1,1), padding = 'same', name = conv_name_base + '2b', kernel_initializer = glorot_uniform(seed=0))(X)\n",
-    "    # X = BatchNormalization(axis = 3, name = bn_name_base + '2b')(X)\n",
-    "    # X = Activation('relu')(X)\n",
-    "\n",
-    "    # # Third component of main path (≈2 lines)\n",
-    "    # X = Conv2D(filters = F3, kernel_size = (1, 1), strides = (1,1), padding = 'valid', name = conv_name_base + '2c', kernel_initializer = glorot_uniform(seed=0))(X)\n",
-    "    # X = BatchNormalization(axis = 3, name = bn_name_base + '2c')(X)\n",
-    "\n",
-    "    # # Final step: Add shortcut value to main path, and pass it through a RELU activation (≈2 lines)\n",
-    "    # X = Add()([X, X_shortcut])\n",
-    "    # X = Activation('relu')(X)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "out = [ 0.94822985  0.          1.16101444  2.747859    0.          1.36677003]\n"
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'Session'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#tf.reset_default_graph()\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSession\u001b[49m() \u001b[38;5;28;01mas\u001b[39;00m test:\n\u001b[0;32m      4\u001b[0m     np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      5\u001b[0m     A_prev \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mplaceholder(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfloat\u001b[39m\u001b[38;5;124m\"\u001b[39m, [\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m6\u001b[39m])\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'Session'"
      ]
     }
    ],
    "source": [
-    "tf.reset_default_graph()\n",
+    "#tf.reset_default_graph()\n",
     "\n",
     "with tf.Session() as test:\n",
     "    np.random.seed(1)\n",
@@ -3285,7 +3279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
