--- a/C4 - Convolutional Neural Networks/Week 3/Car detection for Autonomous Driving/Autonomous_driving_application_Car_detection.ipynb
+++ b/C4 - Convolutional Neural Networks/Week 3/Car detection for Autonomous Driving/Autonomous_driving_application_Car_detection.ipynb
@@ -1443,7 +1443,7 @@
    "launcher_item_id": "bbBOL"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1457,9 +1457,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
